fix: adjust OrdersGenerateActionModal width for better responsiveness on Mobile

--- a/src/modules/commerce/components/orders-generate-action-modal/orders-generate-action-modal.scss
+++ b/src/modules/commerce/components/orders-generate-action-modal/orders-generate-action-modal.scss
@@ -2,6 +2,8 @@
 
 .ordersGenerateActionModal {
     max-height: 90%;
+    width: 45%;
+
     .ant-modal-content {
         padding: 2rem !important;
 
@@ -24,5 +26,15 @@
         display: flex;
         flex-direction: column;
         gap: 0.75rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .ordersGenerateActionModal {
+        width: 90%;
+
+        .ant-modal-content {
+            padding: 2rem 1rem !important;
+        }
     }
 }
